--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,23 +1,25 @@
-<div class="w-100 h-100">
-    <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            1 of 2
-          </div>
-          <div class="col">
-            2 of 2
-          </div>
-        </div>
-        <div class="row">
-          <div class="col">
-            1 of 3
-          </div>
-          <div class="col">
-            2 of 3
-          </div>
-          <div class="col">
-            3 of 3
+<div class=" p-5 pt-3">
+  <div class="d-flex justify-content-between p-2 ">
+    <div class="h3">Products</div>
+
+  </div>
+  <div class="container h-100">
+    
+      <div class="row row-cols-4 h-100 ">
+        <div class="col mb-3" *ngFor="let product of products">
+          <div class="card h-100" style="width: 18rem;">
+            
+            <div class="card-body">
+              <h5 class="card-title">{{product.name}}</h5>
+              <p class="card-text">{{product.description}}</p>
+              <div>Rs. {{product.price}}</div> 
+              <button title="add-to-cart" class="btn btn-primary">Add to Cart</button>
+            </div>
           </div>
         </div>
+        
       </div>
+    
+    
+  </div>
 </div>
