--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,30 +1,48 @@
 <nav class="navbar navbar-expand-lg bg-dark bg-gradient navbar-dark ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">E-Comm</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+
+          <li class="nav-item" *ngIf="localStore.getRole()=='u'" >
+            <a class="nav-link "  href="/home">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Product</a>
+          <li class="nav-item" *ngIf="localStore.getRole()=='u'">
+            <a class="nav-link" >Product</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Cart</a>
+          <li class="nav-item" *ngIf="localStore.getRole()=='u'">
+            <a class="nav-link" href="/cart">Cart</a>
           </li>
-          <li class="nav-item dropdown">
+
+          <li class="nav-item" *ngIf="localStore.getRole()=='a'" >
+            <a class="nav-link " href="/admin">Home</a>
+          </li>
+          <li class="nav-item" *ngIf="localStore.getRole()=='a'">
+            <a class="nav-link" href="/admin/product" >Products</a>
+          </li>
+          <li class="nav-item" *ngIf="localStore.getRole()=='a'">
+            <a class="nav-link" href="/admin/order">Orders</a>
+          </li>
+
+          
+          <li class="nav-item dropdown" *ngIf="authService.isLoggedIn()">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Name
+              {{localStore.getUserName()}}
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Logout</a></li>
+              <li><a class="dropdown-item"  (click)="logout()">Logout</a></li>
               <li><a class="dropdown-item" href="#">Profile</a></li>
               
             </ul>
           </li>
+          
+          <li *ngIf="!authService.isLoggedIn()" class="nav-item" >
+              <a class="nav-link" href="/login">Login</a>
+          </li>
+          
         </ul>
       </div>
     </div>
