--- a/src/app/components/cart-page/cart-page.component.html
+++ b/src/app/components/cart-page/cart-page.component.html
@@ -1,40 +1,58 @@
 <div class=" p-5 pt-3">
     <div class="d-flex justify-content-between p-2 ">
         <div class="h3">Cart</div>
-        
+
     </div>
-    <div class="rounded p-2 m-2 shadow-lg">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Product ID</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Price</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Action</th>
+    <div class="d-flex flex-row">
 
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor='let item of carts'>
-                    <th scope="row">{{item.product.productid}}</th>
-                    <td>{{item.product.name}}</td>
+        <div class="rounded p-2 m-2 shadow-lg w-75" >
+            <table class="table table-hover" *ngIf="carts.length>=1">
+                <thead>
+                    <tr>
+                        <th scope="col">Product ID</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Quantity</th>
+                        <th scope="col">Action</th>
 
-                    <td>Rs. {{item.product.price}}</td>
-                    <td>{{item.quantity}}</td>
-                    <td>
-                        <div class>
-                            <button class="btn btn-secondary" title="edit"
-                                data-bs-toggle="modal"
-                                data-bs-target="#editModal">-</button>
-                            <button class="btn btn-danger"
-                                title="delete">+</button>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor='let item of carts'>
+                        <th scope="row">{{item.product.productid}}</th>
+                        <td>{{item.product.name}}</td>
 
-                        </div>
-                    </td>
-                </tr>
+                        <td>Rs. {{item.product.price}}</td>
+                        <td>{{item.quantity}}</td>
+                        <td>
+                            <div class>
+                                <button class="btn btn-secondary" title="edit"
+                                    (click)="updateReduceQuantity(item)">-</button>
+                                <button class="btn btn-danger"
+                                    (click)="updateAddQuantity(item)"
+                                    title="add">+</button>
 
-            </tbody>
-        </table>
+                            </div>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+
+            <div class="d-flex flex-column justify-content-center align-items-center h-100" *ngIf="carts.length<1">
+                <label class="h3">Cart is Empty</label>
+                <a href="/home"  class="btn btn-primary m-2">Keep Shopping</a>
+            </div>
+        </div>
+        <div class="w-25 p-2">
+            <div class="card">
+                <h5 class="card-header">Totel</h5>
+                <div class="card-body">
+                  <h5 class="card-title">Subtotel( {{carts.length}} items) : Rs. {{subTotel.toFixed(2)}}</h5>
+                    <button (click)="proceedToPay()" class="btn btn-primary w-100">Proceed to Pay</button>
+                </div>
+              </div> 
+            
+        </div>
     </div>
 </div>
