--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -9,11 +9,11 @@
         <div class="col mb-3" *ngFor="let product of products">
           <div class="card h-100" style="width: 18rem;">
             
-            <div class="card-body">
+            <div class="card-body d-flex flex-column justify-content-between">
               <h5 class="card-title">{{product.name}}</h5>
               <p class="card-text">{{product.description}}</p>
               <div>Rs. {{product.price}}</div> 
-              <button title="add-to-cart" class="btn btn-primary">Add to Cart</button>
+              <button title="add-to-cart" class="btn btn-primary"(click)="addItemToCart(product)" >Add to Cart</button>
             </div>
           </div>
         </div>
