--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,25 +1,33 @@
 <div class="d-flex align-items-center h-100">
-<main class="form-signin text-center align-items-center">
+  <main class="form-signin text-center align-items-center">
     <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm)">
       <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-  
+
       <div class="form-floating">
-        <input type="email" formControlName="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+        <input type="email" formControlName="email" class="form-control"
+          id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">Email address</label>
       </div>
       <div class="form-floating">
-        <input type="password" formControlName="password" class="form-control" id="floatingPassword" placeholder="Password">
+        <input type="password" formControlName="password" class="form-control"
+          id="floatingPassword" placeholder="Password">
         <label for="floatingPassword">Password</label>
       </div>
-  
-      <div class="checkbox mb-3">
+
+      <div class="d-flex flex-row justify-content-around">
+        <div class="checkbox mb-3">
+          <label>
+            <input type="checkbox" value="remember-me"> Remember me
+          </label>
+        </div>
         <label>
-          <input type="checkbox" value="remember-me"> Remember me
+          <a href="/registration">Register User</a>
         </label>
       </div>
-      <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+      <button class="w-100 btn btn-lg btn-primary" type="submit">Sign
+        in</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
     </form>
-</main>
+  </main>
 </div>
