--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,18 @@ body {
   height: 100%;
 }
 
+.error{
+  color: #ff0000;
+}
+
+.success{
+  color: #39ab81;
+}
+
+.ng-valid[required], .ng-valid.required  {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid:not(form)  {
+  border-left: 5px solid #a94442; /* red */
+}
