--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 
-<app-nav-bar ></app-nav-bar>
-<router-outlet></router-outlet>
+<app-nav-bar [noOfCartItems]="noOfCartItems" ></app-nav-bar>
+<router-outlet (activate)="subtoEmit($event)" ></router-outlet>
