--- a/src/app/components/cart-page/cart-page.component.html
+++ b/src/app/components/cart-page/cart-page.component.html
@@ -3,7 +3,7 @@
         <div class="h3">Cart</div>
 
     </div>
-    <div class="d-flex flex-row">
+    <div class=" carttotel">
 
         <div class="rounded p-2 m-2 shadow-lg w-75" >
             <table class="table table-hover" *ngIf="carts.length>=1">
@@ -41,7 +41,7 @@
 
             <div class="d-flex flex-column justify-content-center align-items-center h-100" *ngIf="carts.length<1">
                 <label class="h3">Cart is Empty</label>
-                <a href="/home"  class="btn btn-primary m-2">Keep Shopping</a>
+                <a href="/"  class="btn btn-primary m-2">Keep Shopping</a>
             </div>
         </div>
         <div class="w-25 p-2">
