--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,20 +1,45 @@
 <div class="d-flex align-items-center h-100">
   <main class="form-signin text-center align-items-center">
-    <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm)">
-      <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
+    <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
       <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-
+    
       <div class="form-floating">
         <input type="email" formControlName="email" class="form-control"
           id="floatingInput" placeholder="name@example.com">
         <label for="floatingInput">Email address</label>
+        <div *ngIf="myForm.get('email')?.invalid && myForm.get('email')?.touched" class="text-danger">
+           Email is invalid
+        </div>
+        <div class="text-danger" *ngIf="myForm.get('email')?.errors?.['required'] && myForm.get('email')?.touched">Email is required</div>
+        <div class="text-danger" *ngIf="myForm.get('email')?.hasError('noSpaceAllowed')">Whitespace is not allowed</div>
+
+
       </div>
+    
       <div class="form-floating">
         <input type="password" formControlName="password" class="form-control"
           id="floatingPassword" placeholder="Password">
         <label for="floatingPassword">Password</label>
+        <!-- <div *ngIf="myForm.get('password')?.invalid && myForm.get('password')?.touched" class="text-danger">
+          <div *ngIf="myForm.get('password')?.errors?.['required']">Password is required</div>
+          <div *ngIf="myForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long</div>
+          <div *ngIf="myForm.get('password')?.errors?.['whitespace']">Password cannot start with whitespace</div>
+        </div> -->
+        <div class="  text-danger text-sm" *ngIf="myForm.get('password')?.dirty">
+          <div class="block" *ngIf="!myForm.get('password')?.value?.match('^(?=.*[A-Z])')">At least one  uppercase
+                                  letter.</div>
+          <div class="block"  *ngIf="!myForm.get('password')?.value?.match('(?=.*[a-z])')">At least one lowercase
+                                  letter.</div>
+          <div class="block"  *ngIf="!myForm.get('password')?.value?.match('(.*[0-9].*)')">At least one
+                                  digit.</div>
+          <div class="block"  *ngIf="!myForm.get('password')?.value?.match('(?=.*[!@#$%^&*])')">At least one
+                                  special
+                                  character.</div>
+          <div class="block"  *ngIf="!myForm.get('password')?.value?.match('.{8,}')">At least 8 characters
+                                  long.</div>
+       </div>
       </div>
-
+    
       <div class="d-flex flex-row justify-content-around">
         <div class="checkbox mb-3">
           <label>
@@ -25,9 +50,10 @@
           <a href="/registration">Register User</a>
         </label>
       </div>
-      <button class="w-100 btn btn-lg btn-primary" type="submit">Sign
-        in</button>
+      
+      <button [disabled]="myForm.invalid" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
       <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
     </form>
+    
   </main>
 </div>
