--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -7,26 +7,31 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="navbar-nav">
 
-          <li class="nav-item" *ngIf="localStore.getRole()=='u'" >
-            <a class="nav-link "  href="/home">Home</a>
+           
+
+          <li class="nav-item" *ngIf="!localStore.checkAdmin()" >
+            <a class="nav-link "  href="/">Home</a>
           </li>
-          <li class="nav-item" *ngIf="localStore.getRole()=='u'">
+          <li class="nav-item" *ngIf="localStore.checkUser()">
             <a class="nav-link" >Product</a>
           </li>
-          <li class="nav-item" *ngIf="localStore.getRole()=='u'">
-            <a class="nav-link" href="/cart">Cart</a>
+          <li class="nav-item" *ngIf="localStore.checkUser()">
+            <a class="nav-link position-relative cart" href="/cart">Cart
+              <div class="position-absolute numcart" *ngIf="noOfCartItems>=1">{{noOfCartItems}}</div>
+            </a>
           </li>
 
-          <li class="nav-item" *ngIf="localStore.getRole()=='a'" >
+          <li class="nav-item" *ngIf="localStore.checkAdmin()" >
             <a class="nav-link " href="/admin">Home</a>
           </li>
-          <li class="nav-item" *ngIf="localStore.getRole()=='a'">
+          <li class="nav-item" *ngIf="localStore.checkAdmin()">
             <a class="nav-link" href="/admin/product" >Products</a>
           </li>
-          <li class="nav-item" *ngIf="localStore.getRole()=='a'">
+          <li class="nav-item" *ngIf="localStore.checkAdmin()">
             <a class="nav-link" href="/admin/order">Orders</a>
           </li>
 
+         
           
           <li class="nav-item dropdown" *ngIf="authService.isLoggedIn()">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,8 +45,10 @@
           </li>
           
           <li *ngIf="!authService.isLoggedIn()" class="nav-item" >
-              <a class="nav-link" href="/login">Login</a>
-          </li>
+            <a class="nav-link" href="/login">Login</a>
+        </li>
+
+          
           
         </ul>
       </div>
