--- a/src/app/components/registration-page/registration-page.component.html
+++ b/src/app/components/registration-page/registration-page.component.html
@@ -1,34 +1,66 @@
 <div class="d-flex align-items-center h-100">
     <main class="form-signin text-center align-items-center">
-      <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm)">
-        <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
-        <h1 class="h3 mb-3 fw-normal">Registration</h1>
-  
-        <div class="form-floating">
-            <input type="text" formControlName="username" class="form-control"
-              id="floatingUserInput" placeholder="Uesrname">
-            <label for="floatingUserInput">Username</label>
-          </div>
+        <form [formGroup]="myForm" (ngSubmit)="onSubmit(myForm)">
+            <!-- <img class="mb-4" src="../assets/brand/bootstrap-logo.svg" alt="" width="72" height="57"> -->
+            <h1 class="h3 mb-3 fw-normal">Registration</h1>
 
-        <div class="form-floating">
-          <input type="email" formControlName="email" class="form-control"
-            id="floatingInput" placeholder="name@example.com">
-          <label for="floatingInput">Email address</label>
-        </div>
+            <div class="form-floating">
+                <input type="text" formControlName="username"
+                    class="form-control"
+                    id="floatingUserInput" placeholder="Uesrname">
+                <label for="floatingUserInput">Username</label>
+                <div class="error"
+                    *ngIf="myForm.get('username')?.invalid && myForm.get('username')?.touched">UserName
+                    is Required </div>
 
-        <div class="form-floating">
-          <input type="password" formControlName="password" class="form-control"
-            id="floatingPassword" placeholder="Password">
-          <label for="floatingPassword">Password</label>
-        </div>
-  
-        
-        <label class="mb-2">
-            <a href="/registration">Already Registered?</a>
-          </label>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign
-          in</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
-      </form>
+                <div class="error"
+                    *ngIf="myForm.controls['username'].hasError('minlength')">
+                    Username should atleast contain 5 character
+                </div>
+                <div class="error"
+                    *ngIf="myForm.controls['username'].hasError('maxlength')">
+                    Username cannot exceed 12 character
+                </div>
+            </div>
+
+            <div class="form-floating">
+                <input type="email" formControlName="email" class="form-control"
+                    id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Email address</label>
+                <div *ngIf="myForm.get('email')?.invalid && myForm.get('email')?.touched" class="text-danger">
+                    Email is invalid
+                 </div>
+                 <div class="text-danger" *ngIf="myForm.get('email')?.errors?.['required'] && myForm.get('email')?.touched">Email is required</div>
+                 <div class="text-danger" *ngIf="myForm.get('email')?.hasError('noSpaceAllowed')">Whitespace is not allowed</div>
+         
+            </div>
+
+            <div class="form-floating">
+                <input type="password" formControlName="password"
+                    class="form-control"
+                    id="floatingPassword" placeholder="Password">
+                <label for="floatingPassword">Password</label>
+                <div class="  text-danger text-sm" *ngIf="myForm.get('password')?.dirty">
+                    <div class="block" *ngIf="!myForm.get('password')?.value?.match('^(?=.*[A-Z])')">At least one  uppercase
+                                            letter.</div>
+                    <div class="block"  *ngIf="!myForm.get('password')?.value?.match('(?=.*[a-z])')">At least one lowercase
+                                            letter.</div>
+                    <div class="block"  *ngIf="!myForm.get('password')?.value?.match('(.*[0-9].*)')">At least one
+                                            digit.</div>
+                    <div class="block"  *ngIf="!myForm.get('password')?.value?.match('(?=.*[!@#$%^&*])')">At least one
+                                            special
+                                            character.</div>
+                    <div class="block"  *ngIf="!myForm.get('password')?.value?.match('.{8,}')">At least 8 characters
+                                            long.</div>
+                 </div>
+            </div>
+
+            <label class="mb-2">
+                <a href="/registration">Already Registered?</a>
+            </label>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign
+                in</button>
+            <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+        </form>
     </main>
-  </div>
+</div>
