--- a/src/app/components/admin-product-page/admin-product-page.component.html
+++ b/src/app/components/admin-product-page/admin-product-page.component.html
@@ -30,7 +30,7 @@
                     <td>Rs. {{product.price}}</td>
                     <td>{{product.stock}}</td>
                     <td>
-                        <div class>
+                        <div class="d-flex gap-2">
                             <button class="btn btn-secondary" title="edit"
                                 data-bs-toggle="modal"
                                 data-bs-target="#editModal"
