--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
             <a class="nav-link "  href="/">Home</a>
           </li>
           <li class="nav-item" *ngIf="localStore.checkUser()">
-            <a class="nav-link" >Product</a>
+            <a class="nav-link" href="/product" >Product</a>
           </li>
           <li class="nav-item" *ngIf="localStore.checkUser()">
             <a class="nav-link position-relative cart" href="/cart">Cart
