--- a/src/app/components/cart-page/cart-page.component.html
+++ b/src/app/components/cart-page/cart-page.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class=" carttotel">
 
-        <div class="rounded p-2 m-2 shadow-lg w-75" >
+        <div class="rounded p-2 m-2 shadow-lg w-75">
             <table class="table table-hover" *ngIf="carts.length>=1">
                 <thead>
                     <tr>
@@ -25,10 +25,11 @@
                         <td>Rs. {{item.product.price}}</td>
                         <td>{{item.quantity}}</td>
                         <td>
-                            <div class>
-                                <button class="btn btn-secondary" title="edit"
+                            <div class="d-flex gap-2">
+                                <button class="btn btn-secondary" title="remove"
                                     (click)="updateReduceQuantity(item)">-</button>
-                                <button class="btn btn-danger"
+
+                                <button class="btn btn-primary"
                                     (click)="updateAddQuantity(item)"
                                     title="add">+</button>
 
@@ -39,20 +40,24 @@
                 </tbody>
             </table>
 
-            <div class="d-flex flex-column justify-content-center align-items-center h-100" *ngIf="carts.length<1">
+            <div
+                class="d-flex flex-column justify-content-center align-items-center h-100"
+                *ngIf="carts.length<1">
                 <label class="h3">Cart is Empty</label>
-                <a href="/"  class="btn btn-primary m-2">Keep Shopping</a>
+                <a href="/" class="btn btn-primary m-2">Keep Shopping</a>
             </div>
         </div>
         <div class="w-25 p-2">
             <div class="card">
                 <h5 class="card-header">Totel</h5>
                 <div class="card-body">
-                  <h5 class="card-title">Subtotel( {{carts.length}} items) : Rs. {{subTotel.toFixed(2)}}</h5>
-                    <button (click)="proceedToPay()" class="btn btn-primary w-100">Proceed to Pay</button>
+                    <h5 class="card-title">Subtotel( {{carts.length}} items) :
+                        Rs. {{subTotel.toFixed(2)}}</h5>
+                    <button (click)="proceedToPay()"
+                        class="btn btn-primary w-100">Proceed to Pay</button>
                 </div>
-              </div> 
-            
+            </div>
+
         </div>
     </div>
 </div>
