--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,25 +1,63 @@
-<div class=" p-5 pt-3">
-  <div class="d-flex justify-content-between p-2 ">
-    <div class="h3">Products</div>
+<div class=" ">
+  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img
+          src="https://rukminim2.flixcart.com/fk-p-flap/1600/270/image/1a7502e2652b70c5.jpeg?q=80"
+          class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img
+          src="https://rukminim2.flixcart.com/fk-p-flap/1600/270/image/04bb152bb2d3f429.jpg?q=80"
+          class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img
+          src="https://rukminim2.flixcart.com/fk-p-flap/1600/270/image/4373e1bc9ffd7daa.jpeg?q=80"
+          class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img
+          src="https://rukminim2.flixcart.com/fk-p-flap/1600/270/image/bdd0654e876b74e8.jpeg?q=80"
+          class="d-block w-100" alt="...">
+      </div>
 
+    </div>
+    <button class="carousel-control-prev" type="button"
+      data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button"
+      data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <div class="container h-100">
-    
+  <div class="p-5 pt-3">
+    <div class="d-flex justify-content-between p-2 ">
+      <div class="h3">Products</div>
+      <a class="h5" href="/product">See more</a>
+
+    </div>
+    <div class="container h-100">
+
       <div class="row row-cols-4 h-100 ">
-        <div class="col mb-3" *ngFor="let product of products">
+        <div class="col mb-3" *ngFor="let product of products | slice:0:4">
           <div class="card h-100" style="width: 18rem;">
-            
+
             <div class="card-body d-flex flex-column justify-content-between">
               <h5 class="card-title">{{product.name}}</h5>
               <p class="card-text">{{product.description}}</p>
-              <div>Rs. {{product.price}}</div> 
-              <button title="add-to-cart" class="btn btn-primary"(click)="addItemToCart(product)" >Add to Cart</button>
+              <div>Rs. {{product.price}}</div>
+              <button title="add-to-cart" class="btn btn-primary"
+                (click)="addItemToCart(product)">Add to Cart</button>
             </div>
           </div>
         </div>
-        
+
       </div>
-    
-    
+
+    </div>
   </div>
 </div>
