--- a/src/app/components/registration-page/registration-page.component.html
+++ b/src/app/components/registration-page/registration-page.component.html
@@ -27,12 +27,18 @@
                 <input type="email" formControlName="email" class="form-control"
                     id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Email address</label>
-                <div *ngIf="myForm.get('email')?.invalid && myForm.get('email')?.touched" class="text-danger">
+                <div
+                    *ngIf="myForm.get('email')?.invalid && myForm.get('email')?.touched"
+                    class="text-danger">
                     Email is invalid
-                 </div>
-                 <div class="text-danger" *ngIf="myForm.get('email')?.errors?.['required'] && myForm.get('email')?.touched">Email is required</div>
-                 <div class="text-danger" *ngIf="myForm.get('email')?.hasError('noSpaceAllowed')">Whitespace is not allowed</div>
-         
+                </div>
+                <div class="text-danger"
+                    *ngIf="myForm.get('email')?.errors?.['required'] && myForm.get('email')?.touched">Email
+                    is required</div>
+                <div class="text-danger"
+                    *ngIf="myForm.get('email')?.hasError('noSpaceAllowed')">Whitespace
+                    is not allowed</div>
+
             </div>
 
             <div class="form-floating">
@@ -40,27 +46,38 @@
                     class="form-control"
                     id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
-                <div class="  text-danger text-sm" *ngIf="myForm.get('password')?.dirty">
-                    <div class="block" *ngIf="!myForm.get('password')?.value?.match('^(?=.*[A-Z])')">At least one  uppercase
-                                            letter.</div>
-                    <div class="block"  *ngIf="!myForm.get('password')?.value?.match('(?=.*[a-z])')">At least one lowercase
-                                            letter.</div>
-                    <div class="block"  *ngIf="!myForm.get('password')?.value?.match('(.*[0-9].*)')">At least one
-                                            digit.</div>
-                    <div class="block"  *ngIf="!myForm.get('password')?.value?.match('(?=.*[!@#$%^&*])')">At least one
-                                            special
-                                            character.</div>
-                    <div class="block"  *ngIf="!myForm.get('password')?.value?.match('.{8,}')">At least 8 characters
-                                            long.</div>
-                 </div>
+                <div class="  text-danger text-sm"
+                    *ngIf="myForm.get('password')?.dirty">
+                    <div class="block"
+                        *ngIf="!myForm.get('password')?.value?.match('^(?=.*[A-Z])')">At
+                        least one uppercase
+                        letter.</div>
+                    <div class="block"
+                        *ngIf="!myForm.get('password')?.value?.match('(?=.*[a-z])')">At
+                        least one lowercase
+                        letter.</div>
+                    <div class="block"
+                        *ngIf="!myForm.get('password')?.value?.match('(.*[0-9].*)')">At
+                        least one
+                        digit.</div>
+                    <div class="block"
+                        *ngIf="!myForm.get('password')?.value?.match('(?=.*[!@#$%^&*])')">At
+                        least one
+                        special
+                        character.</div>
+                    <div class="block"
+                        *ngIf="!myForm.get('password')?.value?.match('.{8,}')">At
+                        least 8 characters
+                        long.</div>
+                </div>
             </div>
 
             <label class="mb-2">
-                <a href="/registration">Already Registered?</a>
+                <a href="/login">Already Registered?</a>
             </label>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign
-                in</button>
-            <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+                up</button>
+            <p class="mt-5 mb-3 text-muted">&copy; 2023–2024</p>
         </form>
     </main>
 </div>
