--- a/src/app/components/admin-product-page/admin-product-page.component.html
+++ b/src/app/components/admin-product-page/admin-product-page.component.html
@@ -7,8 +7,8 @@
                 (click)="setNewProduct()">Create new Product</button>
         </div>
     </div>
-    <div class="rounded p-2 m-2 shadow-lg">
-        <table class="table table-hover">
+    <div class="rounded p-2 m-2 shadow-lg bg-white">
+        <table class="table table-hover  align-middle">
             <thead>
                 <tr>
                     <th scope="col">Product ID</th>
