--- a/src/app/components/admin-home/admin-home.component.html
+++ b/src/app/components/admin-home/admin-home.component.html
@@ -1,1 +1,76 @@
-<p>admin-home works!</p>
+<div class="p-4 px-5">
+    <div class="h5">Dashboard</div>
+    <div class=" d-flex flex-row py-4 justify-content-around gap-4">
+        <div class="shadow w-100 d-flex flex-row rounded-2 bg-white">
+
+            <div class="p-4 ">
+                <fa-icon [icon]="dollor"></fa-icon>
+            </div>
+            <div class="h-100 w-100">
+                <div class="h-50 w-100 d-flex align-items-end text-body-tertiary">
+                    Totel Sales
+                </div>
+                <div class="h-50 w-100">&#8377;99999</div>
+            </div>
+        </div>
+        <div class="shadow w-100 d-flex flex-row rounded-2 bg-white">
+            <div class="p-4 ">
+                <fa-icon [icon]="cart"></fa-icon>
+            </div>
+            <div class="h-100 w-100">
+                <div class="h-50 w-100 d-flex align-items-end text-body-tertiary">Totel Order</div>
+                <div class="h-50 w-100 ">9999999</div>
+            </div>
+        </div>
+        <div class="shadow w-100 d-flex flex-row rounded-2 bg-white">
+            <div class="p-4 ">
+                <fa-icon [icon]="basket"></fa-icon>
+            </div>
+            <div class="h-100 w-100 ">
+                <div class="h-50 w-100 d-flex align-items-end text-body-tertiary ">Totel Product</div>
+                <div class="h-50 w-100">99999</div>
+            </div>
+        </div>
+
+    </div>
+    <div>
+        <div class="rounded p-2  shadow-lg bg-white">
+            <table class="table table-hover  align-middle">
+                <thead>
+                    <tr>
+                        <th scope="col">Username</th>
+                        <th scope="col">Items</th>
+                        <th scope="col">Status</th>
+                        <th scope="col">Date</th>
+    
+                       
+                        
+    
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor='let order of orders'>
+                        <th scope="row">{{order.user.username}}</th>
+                        <td>
+                            <div *ngFor='let item of order.orderItems'>
+                                {{item.product.name}} x {{item.quantity}}
+                            </div>
+                        </td>
+                        
+                        
+                        <td >
+                            <div class={{order.status}}>
+                            {{order.status}}
+                        </div>
+                        </td>
+    
+                        <td>{{order.createdAt | date:'medium'}}</td>
+                        
+                        
+                    </tr>
+    
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
