--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -43,8 +43,8 @@
     <div class="container h-100">
 
       <div class="row row-cols-4 h-100 ">
-        <div class="col mb-3" *ngFor="let product of products | slice:0:4">
-          <div class="card h-100" style="width: 18rem;">
+        <div  class="col mb-3" *ngFor="let product of products | slice:0:4">
+          <div class="card h-100" >
 
             <div class="card-body d-flex flex-column justify-content-between">
               <h5 class="card-title">{{product.name}}</h5>
@@ -55,9 +55,26 @@
             </div>
           </div>
         </div>
-
+        
+        
       </div>
 
+      <div class="row row-cols-4 h-100 " *ngIf="products.length<=0">
+        <div *ngFor="let number of [0,1,2,3]" >
+          <div class="card is-loading " >
+
+            <div class="card-body d-flex flex-column justify-content-between">
+              <h5 class="card-title"></h5>
+              <p class="card-text"></p>
+              <label></label>
+              <h3></h3>
+              
+            </div>
+          </div>
+        </div>
+        
+        
+      </div>
     </div>
   </div>
 </div>
