--- a/src/app/components/product-page/product-page.component.html
+++ b/src/app/components/product-page/product-page.component.html
@@ -8,7 +8,7 @@
         <div class="container h-100">
 
             <div class="row row-cols-4 h-100 ">
-                <div class="col mb-3" *ngFor="let product of products ">
+                <div class="col mb-3" *ngFor="let product of products "> 
                     <div class="card h-100" style="width: 18rem;">
 
                         <div
@@ -25,6 +25,22 @@
 
             </div>
 
+            <div class="row row-cols-4 h-100 " *ngIf="products.length<=0">
+                <div class="col mb-3" *ngFor="let number of [0,1,2,3,4,5,6,7,8,9,10,11]" >
+                  <div class="card is-loading " >
+        
+                    <div class="card-body d-flex flex-column justify-content-between">
+                      <h5 class="card-title"></h5>
+                      <p class="card-text"></p>
+                      <label></label>
+                      <h3></h3>
+                      
+                    </div>
+                  </div>
+                </div>
+                
+                
+              </div>
         </div>
     </div>
 </div>
