--- a/src/app/components/cart-page/cart-page.component.html
+++ b/src/app/components/cart-page/cart-page.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class=" carttotel">
 
-        <div class="rounded p-2 m-2 shadow-lg w-75">
+        <div class="rounded p-2 m-2 shadow-lg w-75 bg-white">
             <table class="table table-hover" *ngIf="carts.length>=1">
                 <thead>
                     <tr>
